--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "next": "14.2.4",
     "react": "^18",
     "react-dom": "^18",
-    "react-hook-form": "^7.52.0"
+    "react-hook-form": "^7.52.0",
+    "react-sketch-canvas": "^6.2.0",
+    "replicate": "^0.30.2"
   },
   "devDependencies": {
     "@types/node": "^20",
